A simple bug fix in app.js file path in index.html file

--- a/index.html
+++ b/index.html
@@ -93,6 +93,6 @@
 				<tbody id="booklist"></tbody>
 			</table>
 		</div>
-		<script src="app_es6.js"></script>
+		<script src="app.js"></script>
 	</body>
 </html>
