Add total book count feature

--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
 			p {
 				text-align: center;
 			}
-			.deletefulllist {
+			.total {
+				font-weight: bolder;
+			}
+			.deletefulllist,
+			.total {
 				display: flex;
 				justify-content: center;
 			}
@@ -98,6 +102,7 @@
 				</div>
 			</form>
 			<h1>Book List</h1>
+			<div class="total"></div>
 			<table class="u-full-width">
 				<thead>
 					<tr>
